# ammo

./: .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  QWEN.md  README.md  ammo  pyproject.toml
docs/: AMMO_ARCHITECTURE.md  AMMO_MANIFESTO.md  BACKLOG.md  HERMES_INTEGRATION.md  MEMORY_DREAM.md  MODEL_ADAPTER_SPEC.md  ROADMAP.md  SUMMON.md  SYSTEM_PACK_SPEC.md
evals/: coding.yaml  general.yaml  investment.yaml  ops.yaml  personal.yaml  research.yaml
memory/: .gitkeep
registry/: .gitkeep  models.yaml  pricing.yaml  roles.yaml  systems.yaml  tools.yaml
runtime/: .gitkeep
src/ammo/: __init__.py  __main__.py  bootstrap.py  cli.py  config.py  doctor.py  pack_contract.py  paths.py  roleplan.py  triage.py
systems/: .gitkeep
tests/: test_adapters.py  test_assisted_understanding.py  test_binding.py  test_bootstrap.py  test_calibration.py  test_capability_graph.py  test_cli.py  test_confidence.py  test_connect.py  test_consensus.py  test_debate.py  test_doctor.py  test_dream.py  test_economics.py  test_eval_suite.py  test_evaluation.py  test_execution_hardening.py  test_exploration.py  test_grounding.py  test_http_adapter.py  test_latency.py  test_memory.py  test_memory_guided_formation.py  test_mock_execution.py  test_os_sandbox.py  test_promote.py  test_providers.py  test_real_execution.py  test_registry_loader.py  test_roleplan.py  test_roles_cmds.py  test_roles_exploration.py  test_run_logging.py  test_sandbox.py  test_shell.py  test_spec_wiring.py  test_system_optimization.py  test_system_packs.py  test_task_understanding.py  test_team_formation.py  (+6 more)
vaults/: .gitkeep
(+103 files in other folders)
