[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ammo"
version = "0.0.0"
description = "AMMO — the Adaptive Multi-Model Orchestrator, kernel of a Personal AI Operating System."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [{ name = "AMMO" }]
keywords = ["ai", "orchestration", "kernel", "multi-model", "os"]
dependencies = ["PyYAML>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
ammo = "ammo.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ammo"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]
